# sdks

./: .gitignore  .gitleaks.toml  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  NOTICE  README.md  capabilities.json
.github/workflows/: publish-crates.yml  publish-npm.yml  publish-pypi.yml  publish-rubygems.yml  registry-parity.yml  release-go.yml  test-go.yml  test-python.yml  test-ruby.yml  test-rust.yml
codegen/: README.md  generate.py  openapi.yaml  parse_spec.py  render_common.py  render_go.py  render_ruby.py  render_rust.py
docs/: CARVE-METHODOLOGY.md
scripts/: carve-legacy-module.sh  carve.sh  check-registry-parity.py  sync-from-monorepo.sh
sdk-go/: README.md  go.mod  go.sum
sdk-go/wave/: captions.go  chapters.go  client.go  clips.go  collab.go  editor.go  errors.go  go.doc.go  models.go  pagination.go  phone.go  podcast.go  search.go  sentiment.go  studio_ai.go  transcribe.go  voice.go  wave_test.go  x402.go  x402_test.go
sdk-python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
sdk-python/examples/agent_commerce/: 01_pay_per_call.py  README.md  mvp_stream_consume.py
sdk-python/tests/: conftest.py  test_sdk_exports.py
sdk-python/wave/: __init__.py  agents.py  async_client.py  audience.py  captions.py  chapters.py  client.py  clips.py  collab.py  connect.py  creator.py  desktop.py  distribution.py  drm.py  edge.py  editor.py  fleet.py  ghost.py  marketplace.py  mesh.py  notifications.py  phone.py  pipeline.py  podcast.py  prism.py  pulse.py  qr.py  scene.py  search.py  sentiment.py  signage.py  slides.py  studio.py  studio_ai.py  transcribe.py  usb.py  vault.py  voice.py  zoom.py
sdk-ruby/: README.md  wave-sdk.gemspec
sdk-ruby/lib/: wave.rb
sdk-ruby/lib/wave/: captions.rb  chapters.rb  client.rb  clips.rb  collab.rb  editor.rb  errors.rb  phone.rb  podcast.rb  search.rb  sentiment.rb  studio_ai.rb  transcribe.rb  version.rb  voice.rb  x402.rb
sdk-ruby/test/: smoke_test.rb  x402_test.rb
sdk-rust/: Cargo.toml  README.md
sdk-rust/wave/: Cargo.toml
sdk-rust/wave-core/: Cargo.toml
sdk-rust/wave-core/src/: client.rs  error.rs  lib.rs  models.rs  pagination.rs
sdk-rust/wave-x402/: Cargo.toml
sdk-rust/wave-x402/src/: lib.rs
sdk-rust/wave/src/: captions.rs  chapters.rs  clips.rs  collab.rs  editor.rs  lib.rs  phone.rs  podcast.rs  search.rs  sentiment.rs  studio_ai.rs  transcribe.rs  voice.rs
sdk-rust/wave/tests/: smoke.rs
sdk-typescript/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
testdata/: x402_exact_vector.json
