[package]
name = "wave-core"
version = "0.1.0"
edition = "2021"
description = "Core HTTP client, error types, and models for the WAVE API SDK."
license = "Apache-2.0"
repository = "https://github.com/wave-av/sdks"
homepage = "https://wave.online"
rust-version = "1.74"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
