[package]
name = "wave-x402"
version = "0.1.0"
edition = "2021"
description = "WAVE x402 'exact' scheme (EIP-3009 TransferWithAuthorization) payment signing"
license = "MIT"
repository = "https://github.com/wave-av/sdks"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rand = "0.8"
alloy = { version = "2.0.5", features = ["sol-types", "signer-local"] }
# alloy provides EIP-712 typed-data hashing (sol! + SolStruct) and local key signing.

[dev-dependencies]
